<resources>
    <string name="app_name">Swoosh</string>
    <string name="background_image">Background image</string>
    <string name="app_logo">app logo</string>
    <string name="desired_league">Desired League:</string>
    <string name="men">Men</string>
    <string name="women">Women</string>
    <string name="co_ed">Co-ed</string>
    <string name="next">Next</string>
    <string name="welcome_tittle">GO ALL IN</string>
    <string name="welcome_subtitle">ON GOING ALL OUT</string>
    <string name="welcome_description">Fin a team in your city, and dominate the league</string>
    <string name="get_started">Get Started</string>
    <string name="levelString">TextView</string>
    <string name="beginner">BEGINNER</string>
    <string name="baller">BALLER</string>
    <string name="finish">FINISH</string>
    <string name="source_league">Looking for a co-ed beginner league near you...</string>
</resources>
