<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SkillActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/beginnerballerbg"
            android:id="@+id/imageView4"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:scaleType="centerCrop"
            android:contentDescription="@string/background_image"/>
    <ImageView
            android:layout_width="88dp"
            android:layout_height="29dp" app:srcCompat="@drawable/swooshlogo"
            android:id="@+id/imageView2"
            android:scaleType="fitCenter" android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:contentDescription="@string/app_logo"/>
    <TextView
            android:text="@string/levelString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" android:textColor="@android:color/white"
            android:fontFamily="@font/montserrat" android:textSize="18sp" tools:text="I am a:"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/imageView2"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="367dp"
            android:layout_height="wrap_content" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp">
        <ToggleButton
                android:text="@string/beginner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/toggleButton4" android:layout_weight="1"
                android:background="@drawable/swoosh_toggle" android:textColor="@color/colorAccent"
                android:textOff="@string/beginner" android:textOn="@string/beginner" android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>
        <ToggleButton
                android:text="@string/baller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/toggleButton5" android:layout_weight="1"
                android:background="@drawable/swoosh_toggle" android:textColor="@color/colorAccent"
                android:textOff="@string/baller" android:textOn="@string/baller" android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>
    </LinearLayout>
    <Button
            android:text="@string/finish"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView4" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:background="@drawable/swoosh_button" android:textColor="@android:color/white"
            android:fontFamily="@font/montserrat"/>

</android.support.constraint.ConstraintLayout>